Adding several tags and content

--- a/index.html
+++ b/index.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
-<html>  
-    <head>
-        <title>Document</title>
-    </head>
-    <body>
-        <div id="Top">
-            <div id="Header"></div>
-            <div id="Content"></div>
-            <div id="Footer"></div>
+<html>
+
+<head>
+    <title>Document</title>
+</head>
+<body>
+    <div id="Top">
+        <div id="Header">
+            <h1>Artifical Intelligence</h1>
+            <h2>An Intelligence of Machine or Software</h2>
         </div>
-    </body>
+        <div id="Content">
+            <h3>What is AI</h3>
+            <p>
+                Artificial intelligence (AI) is the intelligence of machines or software,
+                as opposed to the intelligence of humans or animals. It is a field of study
+                in computer science that develops and studies intelligent machines. 
+                Such machines may be called AIs.
+            </p>
+            <p>        
+                The various sub-fields of AI research are centered around particular goals 
+                and the use of particular tools. The traditional goals of AI research include 
+                reasoning, knowledge representation, planning, learning, natural language processing, 
+                perception, and support for robotics. General intelligence (the ability to 
+                complete any task performable by a human) is among the field's long-term goals.
+            </p>
+            <p>
+                To solve these problems, AI researchers have adapted and integrated a wide 
+                range of problem-solving techniques, including search and mathematical optimization, 
+                formal logic, artificial neural networks, and methods based on statistics, operations 
+                research, and economics.AI also draws upon psychology, linguistics, philosophy, 
+                neuroscience and other fields.
+            </p>
+            <h3>AI Image</h3> 
+            <img src="ai.jpg" alt="Error">  <!-- Self closing tags-->
+            <h3>Application</h3>
+            <ol type="a">
+                <li>NLP </li>
+                <li>Robotics</li>
+                <li>Perceptron</li>
+                <li>Social Intelligence</li>
+            </ol>
+            <h3>Goals of AI</h3>
+            <ul>
+                <li>Problem Solving</li>
+                <li>Decision Making</li>
+                <li>Planning</li>
+            </ul>
+            <a href="https://en.wikipedia.org/wiki/Artificial_intelligence">External Link</a>
+        </div>
+        <div id="Footer">
+            Practising HTML | &copy copyright | &gtAll rights are reserved: Opensource&lt
+        </div>
+    </div>
+</body>
+
 </html>
