Adding more stylings

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 in computer science that develops and studies intelligent machines. 
                 Such machines may be called AIs.
             </p>
-            <p>        
+            <p class="Coloured">        
                 The various sub-fields of AI research are centered around particular goals 
                 and the use of particular tools. The traditional goals of AI research include 
                 reasoning, knowledge representation, planning, learning, natural language processing, 
                 perception, and support for robotics. General intelligence (the ability to 
                 complete any task performable by a human) is among the field's long-term goals.
             </p>
-            <p>
+            <p class="Coloured">
                 To solve these problems, AI researchers have adapted and integrated a wide 
                 range of problem-solving techniques, including search and mathematical optimization, 
                 formal logic, artificial neural networks, and methods based on statistics, operations 
